
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_10__ TYPE_4__ ;
typedef struct TYPE_9__ TYPE_1__ ;


struct in_addr {int dummy; } ;
struct sockaddr_in {struct in_addr sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {scalar_t__ h_addr; } ;
typedef int sa ;
struct TYPE_9__ {int socket; TYPE_4__* sslHandle; int * sslContext; } ;
typedef TYPE_1__ connection ;
struct TYPE_10__ {int tlsext_heartbeat; } ;
typedef int BIO ;


 int AF_INET ;
 int BIO_NOCLOSE ;
 int BIO_ctrl_set_connected (int *,int,struct sockaddr_in*) ;
 int * BIO_new_dgram (int,int ) ;
 int DTLSv1_client_method () ;
 int ERR_print_errors_fp (int ) ;
 int IPPROTO_UDP ;
 int SOCK_DGRAM ;
 int * SSL_CTX_new (int ) ;
 int SSL_CTX_set_read_ahead (int *,int) ;
 int SSL_TLSEXT_HB_DONT_SEND_REQUESTS ;
 int SSL_TLSEXT_HB_ENABLED ;
 int SSL_connect (TYPE_4__*) ;
 TYPE_4__* SSL_new (int *) ;
 int SSL_set_bio (TYPE_4__*,int *,int *) ;
 int SSL_set_connect_state (TYPE_4__*) ;
 int SSL_set_tlsext_host_name (TYPE_4__*,char*) ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int exit (int) ;
 struct hostent* gethostbyname (char*) ;
 int htons (int) ;
 TYPE_1__* malloc (int) ;
 int memset (char*,int ,int) ;
 int perror (char*) ;
 int printf (char*,...) ;
 int socket (int ,int ,int ) ;
 int stderr ;

connection* dtls_client(int sd, char* server,int port){
 int ret;
 struct hostent *host;
        struct sockaddr_in sa;
        connection *c;
 memset((char *)&sa,0,sizeof(sa));
 c = malloc(sizeof(connection));
        if ((host = gethostbyname(server)) == ((void*)0)) {
  perror("gethostbyname");
  exit(1);
 }
        sd = socket(AF_INET, SOCK_DGRAM, IPPROTO_UDP);
        if(sd==-1){
  printf("[!] cannot create socket\n");
  exit(0);
 }
 sa.sin_family = AF_INET;
        sa.sin_port = htons(port);
        sa.sin_addr = *((struct in_addr *) host->h_addr);
 if (connect(sd, (struct sockaddr *) &sa ,sizeof(struct sockaddr_in)) < 0) {
  perror("connect()");
  exit(0);
 }

 BIO *bio;
        if(c==((void*)0)){
  printf("[ error in malloc()\n");
  exit(0);
 }

        c->sslContext = ((void*)0);
        c->sslContext = SSL_CTX_new(DTLSv1_client_method());
 SSL_CTX_set_read_ahead (c->sslContext, 1);
        if(c->sslContext==((void*)0))
                ERR_print_errors_fp(stderr);
        if(c->sslHandle==((void*)0))
                ERR_print_errors_fp(stderr);

 c->socket = sd;
        c->sslHandle = ((void*)0);
        c->sslHandle = SSL_new(c->sslContext);
 SSL_set_tlsext_host_name(c->sslHandle,server);
 bio = BIO_new_dgram(sd, BIO_NOCLOSE);

 BIO_ctrl_set_connected(bio, 1, &sa);
 SSL_set_bio(c->sslHandle, bio, bio);
 SSL_set_connect_state (c->sslHandle);

        if(SSL_connect(c->sslHandle)!=1)
                ERR_print_errors_fp(stderr);

        if(!c->sslHandle->tlsext_heartbeat & SSL_TLSEXT_HB_ENABLED ||
                c->sslHandle->tlsext_heartbeat & SSL_TLSEXT_HB_DONT_SEND_REQUESTS){
                printf("[ warning: heartbeat extension is unsupported (try anyway), %d \n",c->sslHandle->tlsext_heartbeat);
        }
 return c;
}
